--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-ul {
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+li {
   list-style-type: none;
-  text-align: left;
 }
 
 .search {
-  background-color: rgb(205, 230, 221);
+  background-color: rgb(255, 145, 0);
   /* height: 30px; */
   padding: 10px;
 }
