--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,6 +1,14 @@
 .box-buttons {
   position: absolute;
-  left: 250px;
+  left: 220px;
   display: flex;
   flex-direction: row;
+}
+
+.box-buttons button {
+  width: 110px;
+  background-color: rgb(250, 120, 60);
+  border: 1px rgb(161, 123, 52) solid;
+  border-radius: 5px;
+  box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.6);
 }
