--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,18 @@ li {
   list-style-type: none;
 }
 
-.search {
-  background-color: rgb(255, 145, 0);
+.dark-mode {
+  filter: invert(100%);
+  transition: all 0.5s;
+}
 
-  padding: 10px;
+.btn-dark-mode {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 16px;
+  line-height: 1;
+  font-size: 26px;
+  background-color: rgb(255, 145, 0);
+  border: none;
 }
