--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,5 +1,6 @@
 .search {
-  width: 80%;
   text-align: center;
   box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.6);
+  background-color: rgb(255, 145, 0);
+  padding: 10px 300px;
 }
