--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -35,12 +35,12 @@
 
 .card-details {
   text-align: left;
-  width: 400px;
+  width: 40vw;
   padding: 20px;
   background-color: rgba(255, 231, 221, 0.8);
-  position: relative;
+  position: absolute;
   margin: 50px;
-  right: 10%;
+  left: 450px;
   border-radius: 5px;
 }
 
